<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B009688"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#C61E82AF">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="86dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="312dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_menu_24"
            tools:layout_editor_absoluteY="260dp" />

        <TextView
            android:id="@+id/fstTxt7"
            android:layout_width="224dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="78dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="About Us"
            android:textColor="#ffffff"
            android:textSize="36dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="607dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="#B5FFEB3B">

        <TextView
            android:id="@+id/rate"
            android:layout_width="368dp"
            android:layout_height="119dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="451dp"
            android:gravity="center"
            android:text="@string/aboutUsdes"
            android:textColor="#0A4573"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="122dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="388dp"
            android:gravity="center"
            android:text="Version 0.1.1"
            android:textColor="#0A4573"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/names"
            android:layout_width="305dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="211dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="324dp"
            android:gravity="center"
            android:text="Developing Contributers"
            android:textColor="#0A4573"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="246dp"
            android:background="#AB3F51B5"
            android:ems="20"
            android:text="@string/contributeName2" />

        <EditText
            android:id="@+id/reason2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="363dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="167dp"
            android:background="#AB3F51B5"
            android:ems="20"
            android:text="Perera K.A.W.D" />

        <EditText
            android:id="@+id/reason3"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="446dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="111dp"
            android:background="#AB3F51B5"
            android:ems="20"
            android:text="@string/contributerName1" />

        <EditText
            android:id="@+id/reason4"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="503dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="27dp"
            android:background="#AB3F51B5"
            android:ems="20"
            android:text="@string/contributename3" />

    </RelativeLayout>

</LinearLayout>